{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 233,
  "lineage": "bfc26476-8a1c-7bfa-acea-a1da68a21de0",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/backendAddressPools/multivmss-appg-beap",
                "ip_address_list": [],
                "ip_addresses": [],
                "name": "multivmss-appg-beap"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [
                  {
                    "drain_timeout_sec": 10,
                    "enabled": true
                  }
                ],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/backendHttpSettingsCollection/multivmss-appg-be-htst",
                "name": "multivmss-appg-be-htst",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 9000,
                "probe_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/probes/multivmss-appg-probe",
                "probe_name": "multivmss-appg-probe",
                "protocol": "Http",
                "request_timeout": 1
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/frontendIPConfigurations/multivmss-appg-feip",
                "name": "multivmss-appg-feip",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/publicIPAddresses/ag-pip",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/frontendPorts/multivmss-appg-feport",
                "name": "multivmss-appg-feport",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/gatewayIPConfigurations/my-gateway-ip-configuration",
                "name": "my-gateway-ip-configuration",
                "subnet_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/virtualNetworks/multivmss-vnet/subnets/ag-subnet"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/frontendIPConfigurations/multivmss-appg-feip",
                "frontend_ip_configuration_name": "multivmss-appg-feip",
                "frontend_port_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/frontendPorts/multivmss-appg-feport",
                "frontend_port_name": "multivmss-appg-feport",
                "host_name": "",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/httpListeners/multivmss-appg-httplstn",
                "name": "multivmss-appg-httplstn",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway",
            "identity": [],
            "location": "southeastasia",
            "name": "vmss-appgateway",
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/probes/multivmss-appg-probe",
                "interval": 1,
                "match": [
                  {
                    "body": "Healthy",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "multivmss-appg-probe",
                "path": "/health",
                "pick_host_name_from_backend_http_settings": false,
                "protocol": "Http",
                "timeout": 1,
                "unhealthy_threshold": 2
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/backendAddressPools/multivmss-appg-beap",
                "backend_address_pool_name": "multivmss-appg-beap",
                "backend_http_settings_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/backendHttpSettingsCollection/multivmss-appg-be-htst",
                "backend_http_settings_name": "multivmss-appg-be-htst",
                "http_listener_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/httpListeners/multivmss-appg-httplstn",
                "http_listener_name": "multivmss-appg-httplstn",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway/requestRoutingRules/multivmss-appg-rqrt",
                "name": "multivmss-appg-rqrt",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "multivmss-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {},
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "depends_on": [
            "azurerm_public_ip.agPIP",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.agsubnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_application_gateway",
      "name": "network2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "authentication_certificate": [],
            "autoscale_configuration": [],
            "backend_address_pool": [
              {
                "fqdn_list": [],
                "fqdns": [],
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/backendAddressPools/multivmss-appg-beap2",
                "ip_address_list": [],
                "ip_addresses": [],
                "name": "multivmss-appg-beap2"
              }
            ],
            "backend_http_settings": [
              {
                "affinity_cookie_name": "",
                "authentication_certificate": [],
                "connection_draining": [
                  {
                    "drain_timeout_sec": 10,
                    "enabled": true
                  }
                ],
                "cookie_based_affinity": "Disabled",
                "host_name": "",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/backendHttpSettingsCollection/multivmss-appg-be-htst2",
                "name": "multivmss-appg-be-htst2",
                "path": "/",
                "pick_host_name_from_backend_address": false,
                "port": 9000,
                "probe_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/probes/multivmss-appg-probe2",
                "probe_name": "multivmss-appg-probe2",
                "protocol": "Http",
                "request_timeout": 1
              }
            ],
            "custom_error_configuration": [],
            "disabled_ssl_protocols": [],
            "enable_http2": false,
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/frontendIPConfigurations/multivmss-appg-feip2",
                "name": "multivmss-appg-feip2",
                "private_ip_address": "",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/publicIPAddresses/ag-pip2",
                "subnet_id": ""
              }
            ],
            "frontend_port": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/frontendPorts/multivmss-appg-feport2",
                "name": "multivmss-appg-feport2",
                "port": 80
              }
            ],
            "gateway_ip_configuration": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/gatewayIPConfigurations/my-gateway-ip-configuration2",
                "name": "my-gateway-ip-configuration2",
                "subnet_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/virtualNetworks/multivmss-vnet/subnets/ag-subnet2"
              }
            ],
            "http_listener": [
              {
                "custom_error_configuration": [],
                "frontend_ip_configuration_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/frontendIPConfigurations/multivmss-appg-feip2",
                "frontend_ip_configuration_name": "multivmss-appg-feip2",
                "frontend_port_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/frontendPorts/multivmss-appg-feport2",
                "frontend_port_name": "multivmss-appg-feport2",
                "host_name": "",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/httpListeners/multivmss-appg-httplstn2",
                "name": "multivmss-appg-httplstn2",
                "protocol": "Http",
                "require_sni": false,
                "ssl_certificate_id": "",
                "ssl_certificate_name": ""
              }
            ],
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2",
            "identity": [],
            "location": "southeastasia",
            "name": "vmss-appgateway2",
            "probe": [
              {
                "host": "127.0.0.1",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/probes/multivmss-appg-probe2",
                "interval": 1,
                "match": [
                  {
                    "body": "Healthy",
                    "status_code": [
                      "200-399"
                    ]
                  }
                ],
                "minimum_servers": 0,
                "name": "multivmss-appg-probe2",
                "path": "/health",
                "pick_host_name_from_backend_http_settings": false,
                "protocol": "Http",
                "timeout": 1,
                "unhealthy_threshold": 2
              }
            ],
            "redirect_configuration": [],
            "request_routing_rule": [
              {
                "backend_address_pool_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/backendAddressPools/multivmss-appg-beap2",
                "backend_address_pool_name": "multivmss-appg-beap2",
                "backend_http_settings_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/backendHttpSettingsCollection/multivmss-appg-be-htst2",
                "backend_http_settings_name": "multivmss-appg-be-htst2",
                "http_listener_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/httpListeners/multivmss-appg-httplstn2",
                "http_listener_name": "multivmss-appg-httplstn2",
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/applicationGateways/vmss-appgateway2/requestRoutingRules/multivmss-appg-rqrt2",
                "name": "multivmss-appg-rqrt2",
                "redirect_configuration_id": "",
                "redirect_configuration_name": "",
                "rewrite_rule_set_id": "",
                "rewrite_rule_set_name": "",
                "rule_type": "Basic",
                "url_path_map_id": "",
                "url_path_map_name": ""
              }
            ],
            "resource_group_name": "multivmss-rg",
            "rewrite_rule_set": [],
            "sku": [
              {
                "capacity": 2,
                "name": "Standard_v2",
                "tier": "Standard_v2"
              }
            ],
            "ssl_certificate": [],
            "ssl_policy": [
              {
                "cipher_suites": [],
                "disabled_protocols": [],
                "min_protocol_version": "",
                "policy_name": "",
                "policy_type": ""
              }
            ],
            "tags": {},
            "trusted_root_certificate": [],
            "url_path_map": [],
            "waf_configuration": [],
            "zones": null
          },
          "depends_on": [
            "azurerm_public_ip.agPIP2",
            "azurerm_resource_group.terraformrg",
            "azurerm_subnet.agsubnet2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb",
      "name": "terraformnatlb",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "frontend_ip_configuration": [
              {
                "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb/frontendIPConfigurations/PublicIPAddress",
                "name": "PublicIPAddress",
                "private_ip_address_allocation": "Dynamic",
                "public_ip_address_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/publicIPAddresses/publiclb-pip"
              }
            ],
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb",
            "location": "southeastasia",
            "name": "terraform-natlb",
            "resource_group_name": "multivmss-rg",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform deployment"
            }
          },
          "depends_on": [
            "azurerm_public_ip.PublicLBPIP",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_backend_address_pool",
      "name": "backendpool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb/backendAddressPools/BackEndAddressPool",
            "loadbalancer_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb",
            "name": "BackEndAddressPool",
            "resource_group_name": "multivmss-rg"
          },
          "depends_on": [
            "azurerm_lb.terraformnatlb",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_lb_nat_pool",
      "name": "lbnatpool",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "backend_port": 22,
            "frontend_ip_configuration_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb/frontendIPConfigurations/PublicIPAddress",
            "frontend_ip_configuration_name": "PublicIPAddress",
            "frontend_port_end": 50119,
            "frontend_port_start": 50000,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb/inboundNatPools/ssh",
            "loadbalancer_id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/loadBalancers/terraform-natlb",
            "name": "ssh",
            "protocol": "Tcp",
            "resource_group_name": "multivmss-rg"
          },
          "depends_on": [
            "azurerm_lb.terraformnatlb",
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "PublicLBPIP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "domain_name_label": "multivmss-rg",
            "fqdn": "multivmss-rg.southeastasia.cloudapp.azure.com",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/publicIPAddresses/publiclb-pip",
            "idle_timeout_in_minutes": 4,
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "publiclb-pip",
            "public_ip_address_allocation": "Dynamic",
            "resource_group_name": "multivmss-rg",
            "sku": "Basic",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "agPIP",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/publicIPAddresses/ag-pip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.43.178.21",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "ag-pip",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "multivmss-rg",
            "sku": "Standard",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "agPIP2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Static",
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/publicIPAddresses/ag-pip2",
            "idle_timeout_in_minutes": 4,
            "ip_address": "20.43.177.187",
            "ip_version": "IPv4",
            "location": "southeastasia",
            "name": "ag-pip2",
            "public_ip_address_allocation": "Static",
            "resource_group_name": "multivmss-rg",
            "sku": "Standard",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "agsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.2.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/virtualNetworks/multivmss-vnet/subnets/ag-subnet",
            "name": "ag-subnet",
            "resource_group_name": "multivmss-rg",
            "virtual_network_name": "multivmss-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "agsubnet2",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.3.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/virtualNetworks/multivmss-vnet/subnets/ag-subnet2",
            "name": "ag-subnet2",
            "resource_group_name": "multivmss-rg",
            "virtual_network_name": "multivmss-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "terraformsubnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "10.0.1.0/24",
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/virtualNetworks/multivmss-vnet/subnets/vmss-subnet",
            "name": "vmss-subnet",
            "resource_group_name": "multivmss-rg",
            "virtual_network_name": "multivmss-vnet"
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg",
            "azurerm_virtual_network.terraformvnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "terraformvnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "id": "/subscriptions/05be085b-86ea-4336-addc-38fd56051a9e/resourceGroups/multivmss-rg/providers/Microsoft.Network/virtualNetworks/multivmss-vnet",
            "location": "southeastasia",
            "name": "multivmss-vnet",
            "resource_group_name": "multivmss-rg",
            "tags": {
              "environment": "Terraform Deployment"
            }
          },
          "depends_on": [
            "azurerm_resource_group.terraformrg"
          ]
        }
      ]
    }
  ]
}